tests/src/Loader/classloader/generics/Instantiation/Positive/MultipleInterface11.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_MultipleInterface11_MultipleInterface11_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_MultipleInterface11_MultipleInterface11_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\MultipleInterface11\\MultipleInterface11.cmd");
        }
    }
}
