tests/src/Loader/classloader/generics/Instantiation/Negative/abstract05.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract05_abstract05_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract05_abstract05_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract05\\abstract05.cmd");
        }
    }
}
